--- a/texWriteUp/mixedSystem_operatorSplitting.tex
+++ b/texWriteUp/mixedSystem_operatorSplitting.tex
@@ -55,14 +55,19 @@
 
 \begin{document}
 
-Here I show the cooling effects of a rods on a plate. Here is the system:
+Here is the system:
 \begin{figure}[h]
 \centering
 \includegraphics[height=2in]{PlateAndRod.png}
 \caption{A line and square joined together}
 \end{figure}
 
-\subsection{Studying the square}
+I am using the sequential splitting technique described in section 2.1 of \href{http://www.sciencedirect.com/science/article/pii/S0307904X07001606}{this paper}
+\\
+Let R represent the plate without the rod\\
+Let V represent the plate with the rod temperature as a boundary condition\\
+Let F be the final temperature of the plate with the plate and rod interacting\\
+I am assuming F = R + V\\
 
 The square will have a heat equation $v(x,y,t)$. \\
 Here is the square's diffusion equation:
